Added Camunda | refactor scan video process | Login attempts service